--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <meta name="twitter:card" content="summary_large_image" />
 
   <title>Portfolio – Till Müller</title>
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 
 <body>
