--- a/public/index.html
+++ b/public/index.html
@@ -166,17 +166,17 @@
           </p>
 
           <div class="contact-cards">
-            <a class="card link-card" href="mailto:kontakt@example.com">
+            <a class="card link-card" href="mailto:info@data-tales.dev">
               <div class="card-title">E-Mail</div>
-              <div class="card-sub">kontakt@example.com</div>
+              <div class="card-sub">info@data-tales.dev</div>
             </a>
-            <a class="card link-card" href="https://github.com/" target="_blank" rel="noreferrer">
+            <a class="card link-card" href="https://github.com/till90" target="_blank" rel="noreferrer">
               <div class="card-title">GitHub</div>
               <div class="card-sub">Repos & Code</div>
             </a>
-            <a class="card link-card" href="https://www.linkedin.com/" target="_blank" rel="noreferrer">
-              <div class="card-title">LinkedIn</div>
-              <div class="card-sub">Profil</div>
+            <a class="card link-card" href="https://x.com/SoniTrace" target="_blank" rel="noreferrer">
+              <div class="card-title">X</div>
+              <div class="card-sub">@SoniTrace</div>
             </a>
           </div>
         </div>
