--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,20 @@
 
       <nav class="nav" aria-label="Hauptnavigation">
         <a href="#projects">Projekte</a>
+
+        <div class="nav-dropdown">
+          <button class="nav-dropbtn" type="button" aria-haspopup="true" aria-expanded="false">
+            Dienste
+            <span class="nav-caret" aria-hidden="true">▾</span>
+          </button>
+
+          <div class="nav-menu" role="menu">
+            <a role="menuitem" href="https://plz.data-tales.dev/">PLZ → Koordinaten</a>
+            <a role="menuitem" href="https://paw-wiki.data-tales.dev/">Paw Patrole Wiki</a>
+            <a role="menuitem" href="https://paw-quiz.data-tales.dev/">Paw Patrole Quiz</a>
+          </div>
+        </div>
+
         <a href="#about">Über mich</a>
         <a href="#contact">Kontakt</a>
       </nav>
@@ -57,7 +71,6 @@
 
           <div class="cta-row">
             <a class="btn btn-primary" href="#projects">Projekte ansehen</a>
-            <a class="btn btn-primary" href="https://plz-koordinaten-service-566647089956.europe-west1.run.app">Deinste ansehen</a>
             <a class="btn btn-secondary" href="#about">Kurzprofil</a>
           </div>
 
