--- a/public/index.html
+++ b/public/index.html
@@ -121,8 +121,8 @@
             <!-- Service slides will be injected here -->
           </div>
           <div class="slideshow-nav">
-            <button class="nav-btn prev" aria-label="Vorheriger Dienst"><</button>
-            <button class="nav-btn next" aria-label="Nächster Dienst">></button>
+            <button class="nav-btn prev" aria-label="Vorheriger Dienst">&lt;</button>
+            <button class="nav-btn next" aria-label="Nächster Dienst">&gt;</button>
           </div>
         </div>
       </div>
