--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,8 @@
             <a role="menuitem" href="https://plz.data-tales.dev/">PLZ → Koordinaten</a>
             <a role="menuitem" href="https://paw-wiki.data-tales.dev/">Paw Patrole Wiki</a>
             <a role="menuitem" href="https://paw-quiz.data-tales.dev/">Paw Patrole Quiz</a>
+            <a role="menuitem" href="https://tree-locator.data-tales.dev/">Paw Patrole Quiz</a>
+
           </div>
         </div>
 
