remove unneccassary links

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
   <meta name="theme-color" content="#0b0f19" />
 
   <!-- Open Graph / Social -->
-  <meta property="og:title" content="Portfolio – Till Müller" />
+  <meta property="og:title" content="data-tales - Till Müller" />
   <meta property="og:description" content="Dashboards, Datenvisualisierung, Web-Tools, kleine Games, Python/Flask." />
   <meta property="og:type" content="website" />
   <!-- <meta property="og:image" content="/assets/img/og-image.png" /> -->
   <meta name="twitter:card" content="summary_large_image" />
 
-  <title>Portfolio – Till Müller</title>
+  <title>data-tales - Till Müller</title>
   <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 
@@ -24,7 +24,7 @@
     <div class="container header-inner">
       <a class="brand" href="#" aria-label="Startseite">
         <span class="brand-mark" aria-hidden="true"></span>
-        <span class="brand-text">Till Müller</span>
+        <span class="brand-text">dev-tales</span>
       </a>
 
       <nav class="nav" aria-label="Hauptnavigation">
@@ -57,7 +57,6 @@
           <span aria-hidden="true">☾</span>
           <span class="sr-only">Theme umschalten</span>
         </button>
-        <a class="btn btn-primary" href="#contact">Kontakt</a>
       </div>
     </div>
   </header>
@@ -74,11 +73,6 @@
             Hier findest du ausgewählte Projekte, Demos und Experimente.
           </p>
 
-          <div class="cta-row">
-            <a class="btn btn-primary" href="#projects">Projekte ansehen</a>
-            <a class="btn btn-secondary" href="#about">Kurzprofil</a>
-          </div>
-
           <ul class="meta-row" aria-label="Kurze Fakten">
             <li><span class="dot" aria-hidden="true"></span> Python / Flask</li>
             <li><span class="dot" aria-hidden="true"></span> Datenanalyse & Visualisierung</li>
@@ -86,27 +80,6 @@
           </ul>
         </div>
 
-        <div class="hero-card" role="region" aria-label="Highlights">
-          <div class="stat">
-            <div class="stat-label">Schwerpunkt</div>
-            <div class="stat-value">Data + Web</div>
-          </div>
-          <div class="stat">
-            <div class="stat-label">Typische Outputs</div>
-            <div class="stat-value">Dashboards, APIs, Demos</div>
-          </div>
-          <div class="stat">
-            <div class="stat-label">Stack</div>
-            <div class="stat-value">Python, Flask, HTML/CSS, JS</div>
-          </div>
-
-          <div class="hero-links">
-            <!-- Passe Links an -->
-            <a class="link" href="https://github.com/" target="_blank" rel="noreferrer">GitHub</a>
-            <a class="link" href="https://www.linkedin.com/" target="_blank" rel="noreferrer">LinkedIn</a>
-            <a class="link" href="mailto:kontakt@example.com">E-Mail</a>
-          </div>
-        </div>
       </div>
     </section>
 
