add worm attack

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
             <a role="menuitem" href="https://paw-wiki.data-tales.dev/">Paw Patrole Wiki</a>
             <a role="menuitem" href="https://paw-quiz.data-tales.dev/">Paw Patrole Quiz</a>
             <a role="menuitem" href="https://tree-locator.data-tales.dev/">Tree Locator</a>
+            <a role="menuitem" href="https://worm-attack-3000.data-tales.dev/">Wurm Attacke 3000</a>
 
           </div>
         </div>
@@ -63,25 +64,6 @@
 
   <main id="main">
     <!-- HERO -->
-    <section class="hero">
-      <div class="container hero-grid">
-        <div class="hero-copy">
-          <p class="kicker">Portfolio</p>
-          <h1>Ich baue datengetriebene Web-Tools, Dashboards und kleine interaktive Demos.</h1>
-          <p class="lead">
-            Fokus auf Python/Flask, saubere Visualisierung, gute UX und robuste Deployments.
-            Hier findest du ausgewählte Projekte, Demos und Experimente.
-          </p>
-
-          <ul class="meta-row" aria-label="Kurze Fakten">
-            <li><span class="dot" aria-hidden="true"></span> Python / Flask</li>
-            <li><span class="dot" aria-hidden="true"></span> Datenanalyse & Visualisierung</li>
-            <li><span class="dot" aria-hidden="true"></span> Cloud Deployments (GCP)</li>
-          </ul>
-        </div>
-
-      </div>
-    </section>
 
     <!-- SERVICES SLIDESHOW -->
     <section class="section" id="services">
@@ -128,10 +110,11 @@
       <div class="container about-grid">
         <div>
           <h2>Über mich</h2>
-          <p class="lead">
-            Ich entwickle pragmatische Web-Anwendungen und Visualisierungen, die Daten verständlich machen.
-            Besonders gerne kombiniere ich Data-Pipelines, saubere Frontends und ein leichtgewichtiges Backend.
-          </p>
+                    <p class="lead">
+                      Ich baue datengetriebene Web-Tools, Dashboards und kleine interaktive Demos.
+                      Fokus auf Python/Flask, saubere Visualisierung, gute UX und robuste Deployments.
+                      Hier findest du ausgewählte Projekte, Demos und Experimente.
+                    </p>
 
           <div class="pill-row" aria-label="Skills">
             <span class="pill">Python</span>
