add project flybi card

--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,32 @@
 
         <div class="slideshow-wrapper">
           <div class="slideshow" id="projectSlider">
-            <!-- Project slides will be injected here -->
+            <div class="slide">
+             <div class="card project-card">
+               <div class="card-img">
+                 <div class="project-img-slider" data-images='["/assets/img/projects/flybi-1.png", "/assets/img/projects/flybi-2.png", "/assets/img/projects/flybi-3.png", "/assets/img/projects/flybi-4.png", "/assets/img/projects/flybi-5.png", "/assets/img/projects/flybi-6.png", "/assets/img/projects/flybi-7.png", "/assets/img/projects/flybi-8.png", "/assets/img/projects/flybi-9.png", "/assets/img/projects/flybi-10.png", "/assets/img/projects/flybi-11.png", "/assets/img/projects/flybi-12.png", "/assets/img/projects/flybi-13.png", "/assets/img/projects/flybi-14.png"]'>
+                 </div>
+               </div>
+               <div class="card-content">
+                 <h3>FlyBi/SoniTrace: Offline Vogel-Erkennung</h3>
+                 <p>Ein innovatives System zur automatischen Vogel-Erkennung auf dem Raspberry Pi, das offline arbeitet. Es nutzt BirdNET/TFLite-Modelle, um Vogelstimmen in Echtzeit zu identifizieren – ideal für den Einsatz in abgelegenen Gebieten ohne Internetverbindung.</p>
+
+                 <div class="pill-row" aria-label="Technologien">
+                   <span class="pill">Raspberry Pi</span>
+                   <span class="pill">Python</span>
+                   <span class="pill">TFLite</span>
+                   <span class="pill">BirdNET</span>
+                   <span class="pill">SQLite</span>
+                   <span class="pill">Web-Dashboard</span>
+                 </div>
+
+                 <div class="card-actions">
+                   <a class="btn btn-secondary" href="https://sonitrace.com/" target="_blank" rel="noreferrer">Website</a>
+                   <!-- <a class="btn btn-ghost" href="#">Case Study</a> -->
+                 </div>
+               </div>
+             </div>
+           </div>
           </div>
           <div class="slideshow-nav">
             <button class="nav-btn prev" aria-label="Vorheriges Projekt"><</button>
