--- a/public/index.html
+++ b/public/index.html
@@ -40,12 +40,12 @@
           </button>
 
           <div id="servicesMenu" class="card nav-menu" role="menu" hidden>
+            <a role="menuitem" href="https://flybi-demo.data-tales.dev/">Flybi Dashboard Demo</a>
             <a role="menuitem" href="https://plz.data-tales.dev/">PLZ → Koordinaten</a>
             <a role="menuitem" href="https://paw-wiki.data-tales.dev/">Paw Patrole Wiki</a>
             <a role="menuitem" href="https://paw-quiz.data-tales.dev/">Paw Patrole Quiz</a>
             <a role="menuitem" href="https://tree-locator.data-tales.dev/">Tree Locator</a>
             <a role="menuitem" href="https://worm-attack-3000.data-tales.dev/">Wurm Attacke 3000</a>
-
           </div>
         </div>
 
