add twitter feed

--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,17 @@
       </div>
     </section>
 
+    <!-- TWITTER FEED -->
+    <section class="section" id="twitter-feed">
+      <div class="container">
+        <div class="section-head">
+          <h2>Twitter Feed</h2>
+          <p class="muted">Aktuelle Einblicke und Visualisierungen von @SoniTrace.</p>
+        </div>
+        <a class="twitter-timeline" data-height="600" data-theme="dark" href="https://twitter.com/SoniTrace?ref_src=twsrc%5Etfw">Tweets by SoniTrace</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
+    </section>
+
     <!-- ABOUT -->
     <section class="section alt" id="about">
       <div class="container about-grid">
