--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,7 @@
           <h2>Twitter Feed</h2>
           <p class="muted">Aktuelle Einblicke und Visualisierungen von @SoniTrace.</p>
         </div>
-        <a class="twitter-timeline" data-height="600" data-theme="dark" href="https://twitter.com/SoniTrace?ref_src=twsrc%5Etfw">Tweets by SoniTrace</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a class="twitter-timeline" data-height="600" data-theme="dark" data-dnt="true" href="https://twitter.com/SoniTrace?ref_src=twsrc%5Etfw">Tweets by SoniTrace</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
     </section>
 
