update email link

--- a/public/index.html
+++ b/public/index.html
@@ -42,10 +42,12 @@
           <div id="servicesMenu" class="card nav-menu" role="menu" hidden>
             <a role="menuitem" href="https://flybi-demo.data-tales.dev/">Flybi Dashboard Demo</a>
             <a role="menuitem" href="https://wms-wfs-sources.data-tales.dev/">WMS/WFS Server Viewer</a>
+            <a role="menuitem" href="https://tree-locator.data-tales.dev/">Tree Locator</a>
+
             <a role="menuitem" href="https://plz.data-tales.dev/">PLZ → Koordinaten</a>
             <a role="menuitem" href="https://paw-wiki.data-tales.dev/">Paw Patrole Wiki</a>
             <a role="menuitem" href="https://paw-quiz.data-tales.dev/">Paw Patrole Quiz</a>
-            <a role="menuitem" href="https://tree-locator.data-tales.dev/">Tree Locator</a>
+            <a role="menuitem" href="https://hp-quiz.data-tales.dev/">Harry Potter Quiz</a>
             <a role="menuitem" href="https://worm-attack-3000.data-tales.dev/">Wurm Attacke 3000</a>
           </div>
         </div>
@@ -55,7 +57,7 @@
     <div class="header-actions">
       <div class="header-note" aria-label="Feedback Kontakt">
         <span class="header-note__label">Änderung / Kritik:</span>
-        <a class="header-note__mail" href="mailto:infos@data-tales.dev">infos@data-tales.dev</a>
+        <a class="header-note__mail" href="mailto:info@data-tales.dev">info@data-tales.dev</a>
       </div>
 
       <a class="btn btn-primary" href="{{ landing_url }}#contact">Kontakt</a>
