--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
             <a role="menuitem" href="https://plz.data-tales.dev/">PLZ → Koordinaten</a>
             <a role="menuitem" href="https://paw-wiki.data-tales.dev/">Paw Patrole Wiki</a>
             <a role="menuitem" href="https://paw-quiz.data-tales.dev/">Paw Patrole Quiz</a>
-            <a role="menuitem" href="https://hp-quiz.data-tales.dev/">Harry Potter Quiz</a>
+            <a role="menuitem" href="https://wizard-quiz.data-tales.dev/">Wizard Quiz</a>
             <a role="menuitem" href="https://worm-attack-3000.data-tales.dev/">Wurm Attacke 3000</a>
           </div>
         </div>
