change header style

--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
             <a role="menuitem" href="https://tree-locator.data-tales.dev/">Tree Locator</a>
 
             <a role="menuitem" href="https://plz.data-tales.dev/">PLZ → Koordinaten</a>
-            <a role="menuitem" href="https://paw-wiki.data-tales.dev/">Paw Patrole Wiki</a>
-            <a role="menuitem" href="https://paw-quiz.data-tales.dev/">Paw Patrole Quiz</a>
+            <a role="menuitem" href="https://paw-wiki.data-tales.dev/">Paw Wiki</a>
+            <a role="menuitem" href="https://paw-quiz.data-tales.dev/">Paw Quiz</a>
             <a role="menuitem" href="https://wizard-quiz.data-tales.dev/">Wizard Quiz</a>
             <a role="menuitem" href="https://worm-attack-3000.data-tales.dev/">Wurm Attacke 3000</a>
           </div>
@@ -60,7 +60,6 @@
         <a class="header-note__mail" href="mailto:info@data-tales.dev">info@data-tales.dev</a>
       </div>
 
-      <a class="btn btn-primary" href="{{ landing_url }}#contact">Kontakt</a>
       <button class="btn btn-ghost" id="themeToggle" type="button" aria-label="Theme umschalten">
         <span aria-hidden="true" id="themeIcon">☾</span>
         <span class="sr-only">Theme umschalten</span>
