change dropdown style

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <div class="container header-inner">
       <a class="brand" href="#" aria-label="Startseite">
         <span class="brand-mark" aria-hidden="true"></span>
-        <span class="brand-text">dev-tales</span>
+        <span class="brand-text">data-tales</span>
       </a>
 
       <nav class="nav" aria-label="Hauptnavigation">
