add dsgv and impressum

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#0b0f19" />
 
   <!-- Open Graph / Social -->
-  <meta property="og:title" content="data-tales - Till Müller" />
+  <meta property="og:title" content="data-tales " />
   <meta property="og:description" content="Dashboards, Datenvisualisierung, Web-Tools, kleine Games, Python/Flask." />
   <meta property="og:type" content="website" />
   <!-- <meta property="og:image" content="/assets/img/og-image.png" /> -->
@@ -111,23 +111,6 @@
       </div>
     </section>
 
-    <!-- TWITTER FEED -->
-    <section class="section" id="twitter-feed">
-      <div class="container">
-        <div class="section-head">
-          <h2>Twitter Feed</h2>
-          <p class="muted">Aktuelle Einblicke und Visualisierungen von @SoniTrace.</p>
-        </div>
-        <a class="twitter-timeline"
-          data-height="600"
-          data-theme="dark"
-          data-dnt="true"
-          href="https://twitter.com/SoniTrace">
-          Tweets by @SoniTrace
-        </a>
-      </div>
-    </section>
-
     <!-- ABOUT -->
     <section class="section alt" id="about">
       <div class="container about-grid">
@@ -196,14 +179,6 @@
             </a>
           </div>
         </div>
-
-        <div class="contact-note">
-          <h3>Hinweis</h3>
-          <p class="muted">
-            Diese Seite ist bewusst schlank gehalten: schnell, zugänglich, leicht zu pflegen.
-            Projekte laufen je nach Demo als separate Services unter Subdomains.
-          </p>
-        </div>
       </div>
     </section>
   </main>
@@ -212,10 +187,12 @@
     <div class="container footer-inner">
       <span class="muted">© <span id="year"></span> Till Müller</span>
       <span class="muted">Built with HTML/CSS/JS</span>
+      <p>
+          <a href="legal.html">Impressum & Datenschutz</a>
+      </p>
     </div>
   </footer>
 
   <script src="/assets/js/app.js" defer></script>
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
