change impressum class to muted

--- a/public/index.html
+++ b/public/index.html
@@ -187,9 +187,7 @@
     <div class="container footer-inner">
       <span class="muted">© <span id="year"></span> Till Müller</span>
       <span class="muted">Built with HTML/CSS/JS</span>
-      <p>
-          <a href="legal.html">Impressum & Datenschutz</a>
-      </p>
+      <span class="muted"><a href="legal.html">Impressum & Datenschutz</a></span>
     </div>
   </footer>
 
