--- a/public/index.html
+++ b/public/index.html
@@ -27,44 +27,58 @@
         <span class="brand-text">data-tales</span>
       </a>
 
-      <nav class="nav" aria-label="Hauptnavigation">
-        <a href="#projects">Projekte</a>
+<div class="header-actions">
+        <nav class="nav" aria-label="Hauptnavigation">
+          <div class="nav-dropdown" data-dropdown>
+            <button class="btn btn-ghost nav-dropbtn header-iconbtn"
+                    type="button"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                    aria-controls="mainMenu"
+                    aria-label="Menü öffnen">
+              <span class="menu-icon" aria-hidden="true">
+                <span></span><span></span><span></span>
+              </span>
+            </button>
 
-        <div class="nav-dropdown" data-dropdown>
-          <button class="btn btn-ghost nav-dropbtn"
-                  type="button"
-                  aria-haspopup="true"
-                  aria-expanded="false"
-                  aria-controls="servicesMenu">
-            Dienste <span class="nav-caret" aria-hidden="true">▾</span>
-          </button>
+            <div id="mainMenu" class="card nav-menu" role="menu" hidden>
+              <div class="nav-section" role="none">
+                <div class="nav-section-title" role="none">Navigation</div>
+                <a role="menuitem" href="#services">Dienste</a>
+                <a role="menuitem" href="#projects">Projekte</a>
+                <a role="menuitem" href="#about">Über mich</a>
+                <a role="menuitem" href="#contact">Kontakt</a>
+              </div>
 
-          <div id="servicesMenu" class="card nav-menu" role="menu" hidden>
-            <a role="menuitem" href="https://flybi-demo.data-tales.dev/">Flybi Dashboard Demo</a>
-            <a role="menuitem" href="https://wms-wfs-sources.data-tales.dev/">WMS/WFS Server Viewer</a>
-            <a role="menuitem" href="https://tree-locator.data-tales.dev/">Tree Locator</a>
+              <div class="nav-sep" role="none"></div>
 
-            <a role="menuitem" href="https://plz.data-tales.dev/">PLZ → Koordinaten</a>
-            <a role="menuitem" href="https://paw-wiki.data-tales.dev/">Paw Wiki</a>
-            <a role="menuitem" href="https://paw-quiz.data-tales.dev/">Paw Quiz</a>
-            <a role="menuitem" href="https://wizard-quiz.data-tales.dev/">Wizard Quiz</a>
-            <a role="menuitem" href="https://worm-attack-3000.data-tales.dev/">Wurm Attacke 3000</a>
+              <div class="nav-section" role="none">
+                <div class="nav-section-title" role="none">Dienste</div>
+                <a role="menuitem" href="https://flybi-demo.data-tales.dev/">Flybi Dashboard Demo</a>
+                <a role="menuitem" href="https://wms-wfs-sources.data-tales.dev/">WMS/WFS Server Viewer</a>
+                <a role="menuitem" href="https://tree-locator.data-tales.dev/">Tree Locator</a>
+                <a role="menuitem" href="https://plz.data-tales.dev/">PLZ → Koordinaten</a>
+                <a role="menuitem" href="https://paw-wiki.data-tales.dev/">Paw Wiki</a>
+                <a role="menuitem" href="https://paw-quiz.data-tales.dev/">Paw Quiz</a>
+                <a role="menuitem" href="https://wizard-quiz.data-tales.dev/">Wizard Quiz</a>
+                <a role="menuitem" href="https://worm-attack-3000.data-tales.dev/">Wurm Attacke 3000</a>
+              </div>
+
+              <div class="nav-sep" role="none"></div>
+
+              <div class="nav-section" role="none">
+                <div class="nav-section-title" role="none">Änderung / Kritik</div>
+                <a role="menuitem" href="mailto:info@data-tales.dev">info@data-tales.dev</a>
+              </div>
+            </div>
           </div>
-        </div>
+        </nav>
 
-      </nav>
-
-    <div class="header-actions">
-      <div class="header-note" aria-label="Feedback Kontakt">
-        <span class="header-note__label">Änderung / Kritik:</span>
-        <a class="header-note__mail" href="mailto:info@data-tales.dev">info@data-tales.dev</a>
+        <button class="btn btn-ghost header-iconbtn" id="themeToggle" type="button" aria-label="Theme umschalten">
+          <span aria-hidden="true" id="themeIcon">☾</span>
+          <span class="sr-only">Theme umschalten</span>
+        </button>
       </div>
-
-      <button class="btn btn-ghost" id="themeToggle" type="button" aria-label="Theme umschalten">
-        <span aria-hidden="true" id="themeIcon">☾</span>
-        <span class="sr-only">Theme umschalten</span>
-      </button>
-    </div>
     </div>
   </header>
 
