--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <!-- <meta property="og:image" content="/assets/img/og-image.png" /> -->
   <meta name="twitter:card" content="summary_large_image" />
 
-  <title>data-tales - Till Müller</title>
+  <title>data-tales</title>
   <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 
