--- a/public/index.html
+++ b/public/index.html
@@ -22,12 +22,12 @@
 
   <header class="site-header">
     <div class="container header-inner">
-      <a class="brand" href="#" aria-label="Startseite">
+      <a class="brand" href="/" aria-label="Startseite">
         <span class="brand-mark" aria-hidden="true"></span>
         <span class="brand-text">data-tales</span>
       </a>
 
-<div class="header-actions">
+      <div class="header-actions">
         <nav class="nav" aria-label="Hauptnavigation">
           <div class="nav-dropdown" data-dropdown>
             <button class="btn btn-ghost nav-dropbtn header-iconbtn"
@@ -41,7 +41,7 @@
               </span>
             </button>
 
-            <div id="mainMenu" class="card nav-menu" role="menu" hidden>
+            <div id="mainMenu" class="card nav-menu" hidden>
               <div class="nav-section" role="none">
                 <div class="nav-section-title" role="none">Navigation</div>
                 <a role="menuitem" href="#services">Dienste</a>
