add dop20 service

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
                 <div class="nav-section-title" role="none">Dienste</div>
                 <a role="menuitem" href="https://flybi-demo.data-tales.dev/">Flybi Dashboard Demo</a>
                 <a role="menuitem" href="https://wms-wfs-sources.data-tales.dev/">WMS/WFS Server Viewer</a>
+                <a role="menuitem" href="https://fl-ortho.data-tales.dev/">DOP20 Viewer/Downloader</a>
                 <a role="menuitem" href="https://tree-locator.data-tales.dev/">Tree Locator</a>
                 <a role="menuitem" href="https://plz.data-tales.dev/">PLZ → Koordinaten</a>
                 <a role="menuitem" href="https://paw-wiki.data-tales.dev/">Paw Wiki</a>
